# garmin-connect-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.claude/commands/: build-all.md  test-mcp.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  garmin-api-reference.md
docs/initiatives/: overview.md  tasks_lessons.md
docs/initiatives/phase0-scaffolding/: findings.md  plan.md  progress.md  tasks.md
scripts/: inspect.sh  setup_auth.py
src/garmin_mcp/: __init__.py  auth.py  client.py  server.py
src/garmin_mcp/prompts/: __init__.py  health_summary.py  readiness_check.py  sleep_report.py  training_analysis.py
src/garmin_mcp/resources/: __init__.py  athlete.py  daily.py  device.py  readiness.py
src/garmin_mcp/tools/: __init__.py  activities.py  analysis.py  body.py  fenix8.py  health.py  profile.py  sleep.py  training.py  trends.py
tests/: conftest.py  test_client.py  test_prompts.py  test_resources.py  test_resources_device.py  test_tools_activities.py  test_tools_analysis.py  test_tools_body.py  test_tools_fenix8.py  test_tools_health.py  test_tools_profile.py  test_tools_sleep.py  test_tools_training.py  test_tools_trends.py
