[project]
name = "garmin-connect-mcp-server"
version = "0.1.0"
description = "MCP server exposing 64+ Garmin Connect tools from a Fenix 8 AMOLED via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.38",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
garmin-mcp = "garmin_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
